KEY [ ]pending [+]new/added [-]removed [*]changed/in-progress [!]fixed
--- revision #156 : 23jun2023 ---
[+] Resource compiler options by aafemt (https://github.com/aafemt)
[*] Recognize and process only platform-specific library extensions.
[*] Remove 'virtual_' prefix from virtual targets, rename default 'all'/'clean' targets in case of collision.
--- revision #147 : 09jun2013 ---
[!] Fixed setting of automatic file prefix for targets ('lib' for static libraries, etc).
[+] Partially reworked support for multiple toolchains.
[+] Declared MSVC and Borland toolchains.
--- revision #138 : 02feb2013 ---
[!] Fixed out-of-order execution of rules due to missing dependencies when -jN option is used.
[!] Fixed possible 'could not find getcwd' build error due to missing #include.
[*] Corrected default command templates for GCC dynamic library and executable linker.
[+] Added support for multiple platform-specific library extensions.
--- revision #137 : 02sep2012 ---
[!] Fixed output path for Windows resource compiler.
[!] Removed false messages about missing compiler for non-compilable units.
[+] "-mwindows" option is now supplied to the GCC linker for Windows GUI builds;
    for other manually added compilers, an "option_wingui" is available in configuration.
--- revision #136 : 30jul2012 ---
[!] Fixed option syntax for libraries.
--- revision #135 : 10may2012 ---
[!] Fixed possible crash when compiler variable is overridden for units.
[!] Quick fix for handling relative paths outside project tree.
--- revision #133 : 30mar2012 ---
[!] Fixed reading of virtual targets from project file.
[+] Implemented build target selection for virtual targets.
--- revision #130 : 18mar2012 ---
[+] Implemented handling of spaces and special characters in paths.
--- revision #127 : 30nov2011 ---
[!] Fixed possible crash due to undefined toolchain.
[!] Rechecked global compiler variable evaluation.
--- revision #125 : 27nov2011 ---